release 1.2 (03-2010)
- Fixed issue 361
  https://jersey.dev.java.net/issues/show_bug.cgi?id=361
  Introduced new feature (FeaturesAndProperties.FEATURE_XMLROOTELEMENT_PROCESSING)
  which enables getting XmlRootElement annotations and deriving name for list
  from its name property. First letter "decapitalization" is not done
  when this feature is enabled.
- Fixed issue 480
  https://jersey.dev.java.net/issues/show_bug.cgi?id=480
  An error in the decoding of "application/x-www-form-urlencoded" information
  will result in a 400 (Client error) response.
- Fixed issue 471
  https://jersey.dev.java.net/issues/show_bug.cgi?id=471
  LoggingFilter should not have side-effects on the response and retain
  content length information.
- Allow injection of the Client instance onto client-managed provider
  classes.
- Fixed issue 475
  https://jersey.dev.java.net/issues/show_bug.cgi?id=475
  A registered application can return null for getClasses and getSingletons
  which has the same meaning as returning an empty set.
- Fixed issue 479
  https://jersey.dev.java.net/issues/show_bug.cgi?id=479
  Fixed package scanning for applications deployed to the WebLogic application
  server.
- Fixed issue 477
  https://jersey.dev.java.net/issues/show_bug.cgi?id=477
  Added null check for value returned from ServletContext.getResourcePaths.
- Jersey Test Framework modularization
  You can choose which container would be used for testing by depending on that
  module. For example if you want to use InMemory container, specify dependency
  like:
        <dependency>
            <groupId>com.sun.jersey.jersey-test-framework</groupId>
            <artifactId>jersey-test-framework-inmemory</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>

  and it will be used. When you define multiple dependencies and grizzly module
  (default) is present, tests will run on grizzly; otherwise (grizzly module is